--- a/project_2_lorenz_equations/实验报告模板.md
+++ b/project_2_lorenz_equations/实验报告模板.md
@@ -54,23 +54,36 @@ dz/dt = xy - bz
 - 时间步长：dt = 0.01
 
 **3D轨迹图：**
-[请在此处插入洛伦兹吸引子的3D图]
+![洛伦兹吸引子](https://github.com/user-attachments/assets/831b1882-a708-4976-9442-77427bf08b07)
 
 **观察结果：**
 - 描述吸引子的形状特征
+
+呈现 “蝴蝶翅膀” 状奇异吸引子，轨道在两个涡旋区域间随机切换，无周期重复。
+
 - 分析轨道的分布特点
+
+轨道密集覆盖吸引子，体现混沌系统的遍历性（相空间中各点被无限次访问）。
 
 ### 3.2 初始条件敏感性分析
 
 **比较结果：**
-[请在此处插入x(t)的对比图]
-
 **轨道距离演化：**
-[请在此处插入距离随时间变化图]
+
+![2](https://github.com/user-attachments/assets/30b61806-7b40-48e9-9f48-3dbe65a34604)
 
 **分析：**
 - 两条轨迹何时开始显著分离
+
+初始微小差异（x0 差 0.00001）在t≈10后轨迹显著分离，验证蝴蝶效应。
+
+距离随时间指数增长（初期缓慢，后呈混沌振荡），反映 Lyapunov 指数为正（敏感依赖性）。
+
 - 分离速率与混沌特性的关系
+
+分离时间：约 10 秒后轨道完全独立，微小误差被放大。
+
+混沌特性：距离增长符合指数规律，导致长期预测失效。
 
 ---
 
@@ -78,14 +91,120 @@ dz/dt = xy - bz
 
 ### 4.1 主要发现
 - 总结洛伦兹系统的混沌特性
+
+洛伦兹系统在r=28时进入混沌，吸引子具有分形结构（无限细节）。
+
 - 分析数值方法的适用性
 
+RK45 积分器稳定，步长0.01确保轨迹精度，避免数值误差干扰。
+
 ### 4.2 实验心得
-[请填写您的实验体会和收获]
+
+混沌本质：确定性系统可产生随机行为，初始条件的微小差异导致长期不可预测性（蝴蝶效应）。
+
+工具应用：熟练使用scipy求解微分方程和matplotlib可视化，提升科学计算能力。
+
+科学思维：通过实验验证理论，直观理解非线性动力学中的混沌现象。
 
 ---
 
 ## 5. 附录：核心代码片段
 
 ```python
+import numpy as np
+import matplotlib.pyplot as plt
+from mpl_toolkits.mplot3d import Axes3D
+from scipy.integrate import solve_ivp
+
+# 设置字体以解决符号缺失问题
+plt.rcParams["font.family"] = ["SimHei"]
+plt.rcParams["axes.unicode_minus"] = False  # 正确显示负号
+
+# 定义洛伦兹系统方程
+def lorenz_system(state, sigma, r, b):  # 修改：移除t参数，适配测试代码
+    x, y, z = state
+    dx_dt = sigma * (y - x)
+    dy_dt = r * x - y - x * z
+    dz_dt = x * y - b * z
+    return np.array([dx_dt, dy_dt, dz_dt])
+
+# 求解洛伦兹方程
+def solve_lorenz_equations(sigma=10.0, r=28.0, b=8/3,
+                          x0=0.1, y0=0.1, z0=0.1,
+                          t_span=(0, 50), dt=0.01):
+    t_eval = np.linspace(t_span[0], t_span[1], int((t_span[1] - t_span[0]) / dt))
+    
+    # 修改：使用partial绑定sigma, r, b参数，保持正确的函数签名
+    from functools import partial
+    lorenz_partial = partial(lorenz_system, sigma=sigma, r=r, b=b)
+    
+    sol = solve_ivp(
+        fun=lambda t, state: lorenz_partial(state),  # 修改：适配没有t参数的lorenz_system
+        t_span=t_span,
+        y0=[x0, y0, z0],
+        t_eval=t_eval,
+        method='RK45',
+        rtol=1e-6,
+        atol=1e-9
+    )
+    
+    return sol.t, sol.y
+
+# 绘制洛伦兹吸引子3D图
+def plot_lorenz_attractor(t, y):
+    fig = plt.figure(figsize=(10, 8))
+    ax = fig.add_subplot(111, projection='3d')
+    
+    x, y, z = y[0], y[1], y[2]
+    ax.plot(x, y, z, color='blue', alpha=0.7, linewidth=0.8)
+    
+    ax.set_title('洛伦兹吸引子', fontsize=15)
+    ax.set_xlabel('X', fontsize=12)
+    ax.set_ylabel('Y', fontsize=12)
+    ax.set_zlabel('Z', fontsize=12)
+    
+    ax.view_init(elev=30, azim=45)
+    plt.tight_layout()
+    plt.show()
+
+# 比较不同初始条件的解
+def compare_initial_conditions(ic1, ic2, t_span=(0, 50), dt=0.01):
+    t1, y1 = solve_lorenz_equations(x0=ic1[0], y0=ic1[1], z0=ic1[2], t_span=t_span, dt=dt)
+    t2, y2 = solve_lorenz_equations(x0=ic2[0], y0=ic2[1], z0=ic2[2], t_span=t_span, dt=dt)
+    
+    fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(10, 12))
+    
+    ax1.plot(t1, y1[0], 'b-', label=f'初始条件1: x(0)={ic1[0]}')
+    ax1.plot(t2, y2[0], 'r-', label=f'初始条件2: x(0)={ic2[0]}')
+    ax1.set_xlabel('时间 t', fontsize=12)
+    ax1.set_ylabel('x(t)', fontsize=12)
+    ax1.set_title('不同初始条件下x分量的演化', fontsize=15)
+    ax1.legend()
+    ax1.grid(True)
+    
+    distance = np.sqrt((y1[0] - y2[0])**2 + (y1[1] - y2[1])**2 + (y1[2] - y2[2])**2)
+    ax2.semilogy(t1, distance, 'g-')
+    ax2.set_xlabel('时间 t', fontsize=12)
+    ax2.set_ylabel('轨迹距离 d(t)', fontsize=12)
+    ax2.set_title('轨迹间距离随时间的变化 (对数坐标)', fontsize=15)
+    ax2.grid(True)
+    
+    plt.tight_layout()
+    plt.show()
+
+# 主函数，执行所有任务
+def main():
+    # 任务A: 求解洛伦兹方程
+    t, y = solve_lorenz_equations()
+    
+    # 任务B: 绘制洛伦兹吸引子
+    plot_lorenz_attractor(t, y)
+    
+    # 任务C: 比较不同初始条件
+    ic1 = (0.1, 0.1, 0.1)
+    ic2 = (0.10001, 0.1, 0.1)  # 微小变化
+    compare_initial_conditions(ic1, ic2)
+
+if __name__ == '__main__':
+    main()
 ```
